RESOLVED FIXED210510
Content expanding is broken on icourse163.org
https://bugs.webkit.org/show_bug.cgi?id=210510
Summary Content expanding is broken on icourse163.org
alan
Reported 2020-04-14 12:26:33 PDT
1. navigate to https://www.icourse163.org/help/help.htm#/hf?t=2 2. Try to click on any of the drop down arrow buttons and observe the non-animated expanding.
Attachments
Patch (3.88 KB, patch)
2020-04-14 12:30 PDT, alan
no flags
Patch (3.79 KB, patch)
2020-04-14 19:21 PDT, alan
no flags
alan
Comment 1 2020-04-14 12:26:43 PDT
alan
Comment 2 2020-04-14 12:30:16 PDT
alan
Comment 3 2020-04-14 12:32:42 PDT
needs quirk test
Simon Fraser (smfr)
Comment 4 2020-04-14 15:23:36 PDT
Comment on attachment 396449 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396449&action=review > Source/WebCore/page/Quirks.cpp:166 > + // www.icourse163.org's animation code expects a decimal point in the rAF timestamp (millisecond resolution). This should reference the radar number, rather than have this comment here I think.
Darin Adler
Comment 5 2020-04-14 15:26:18 PDT
Comment on attachment 396449 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396449&action=review >> Source/WebCore/page/Quirks.cpp:166 >> + // www.icourse163.org's animation code expects a decimal point in the rAF timestamp (millisecond resolution). > > This should reference the radar number, rather than have this comment here I think. You mean WebKit bugs.webkit.org bug number?
Simon Fraser (smfr)
Comment 6 2020-04-14 15:32:13 PDT
(In reply to Darin Adler from comment #5) > Comment on attachment 396449 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=396449&action=review > > >> Source/WebCore/page/Quirks.cpp:166 > >> + // www.icourse163.org's animation code expects a decimal point in the rAF timestamp (millisecond resolution). > > > > This should reference the radar number, rather than have this comment here I think. > > You mean WebKit bugs.webkit.org bug number? If we're fine with the quirk being public, sure. Enough to track it down in future if we need to know if we can remove the quirk.
alan
Comment 7 2020-04-14 19:21:14 PDT
EWS
Comment 8 2020-04-14 19:46:49 PDT
Committed r260114: <https://trac.webkit.org/changeset/260114> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396490 [details].
Karl Dubost
Comment 9 2023-03-23 19:06:11 PDT
*** Bug 210527 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.