Content expanding is broken on icourse163.org https://bugs.webkit.org/show_bug.cgi?id=210510 <rdar://problem/45951820>

Reviewed by Simon Fraser.

www.icourse163.org's animation code expects a decimal point in the rAF timestamp (millisecond resolution).

* dom/ScriptedAnimationController.cpp:
(WebCore::ScriptedAnimationController::serviceRequestAnimationFrameCallbacks):
* page/Quirks.cpp:
(WebCore::Quirks::needsMillisecondResolutionForHighResTimeStamp const):
* page/Quirks.h:


Canonical link: https://commits.webkit.org/223407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260114 268f45cc-cd09-0410-ab3c-d52691b4dbfc